--- a/app/src/views/dataif/figManage.ejs
+++ b/app/src/views/dataif/figManage.ejs
@@ -8,11 +8,11 @@
   <script src="/ckeditor/build/ckeditor.js"></script>
 </head>
 <body>
-  <%- include('../layout.ejs', { pageTitle: '무화과 사용 내역' }) %>
+  <%- include('../layout.ejs', { pageTitle: '무화과 지급 내역' }) %>
 <section>
     <div>
       <!-- <div class="pagename"><%=userid %></div> -->
-      <table id="fig_payment_table">
+      <!-- <table id="fig_payment_table">
         <tr>
           <th>번호</th>
           <th>상품명</th>
@@ -31,7 +31,7 @@
         <% } %>
       </table>
       <br><br>
-      <div class="pagename">이벤트 참여 내역</div>
+      <div class="pagename">이벤트 참여 내역</div> -->
       <table id="event_part_table">
         <tr>
           <th>번호</th>
