--- a/app/src/views/policy/upload.ejs
+++ b/app/src/views/policy/upload.ejs
@@ -134,12 +134,15 @@
       </div>
       
       <textarea name="content" id="editor"></textarea>
-      <div class="form-row">
+      <br>
+      <!-- <div class="form-row">
         <div class="label-field">정책 사진</div>
           <div class="file-container">
             <input type="file" name="imgFile" id="imgFile" accept="image/*">
           </div>
-      </div>
+      </div> -->
+      
+      <input type="file" name="imgFile" id="imgFile" accept="image/*">
       <script>
         // 3. CKEditor5를 생성할 textarea 지정
         // db에 저장된 데이터를 가져와서 textarea에 넣는다.
