--- a/app/src/views/layout.ejs
+++ b/app/src/views/layout.ejs
@@ -13,6 +13,7 @@
     <div class="menu-items-container" id="member">
       <a href="/admin/dataif"><div class="menu-item">회원 정보 관리</div></a>
       <a href="/admin/dataif/terms"><div class="menu-item">회원 가입 설정</div></a>
+      <a href="/admin/event"><div class="menu-item">이벤트 참여자</div></a>
       <br>
     </div>
     
