--- a/app/src/views/codeData/show.ejs
+++ b/app/src/views/codeData/show.ejs
@@ -20,7 +20,7 @@
               <th>코드설명</th>
               <th>사용여부</th>
               <th>상세 코드</th>
-              <th>수정</th>
+              <!-- <th>수정</th> -->
             </tr>
           </thead>
           <tbody>
@@ -31,7 +31,7 @@
                 <td><%=code_data.code_data_name[i].code_desc%> </td>
                 <td><%=code_data.code_data_name[i].code_use_yn%> </td>
                 <td><a href="/admin/codeData/detail/<%=code_data.code_data_name[i].code %>">조회</a></td>
-                <td><a href="/admin/codeData/update/<%=code_data.code_data_name[i].code %>">수정</a></td>
+                <!-- <td><a href="/admin/codeData/update/<%=code_data.code_data_name[i].code %>">수정</a></td> -->
               </tr>  
             <% } %>
             <tr>
