--- a/app/src/views/dataif/signup.ejs
+++ b/app/src/views/dataif/signup.ejs
@@ -147,7 +147,8 @@
                 },
                 body: JSON.stringify({
                   userid: document.getElementById("userid").value,
-                  user_password: document.getElementById("user_password").value,
+                  password: document.getElementById("user_password").value,
+                  password2: document.getElementById("user_password2").value,
                   user_name: document.getElementById("user_name").value,
                   user_role: document.getElementById("user_role").value,
                   user_type: document.getElementById("user_type").value,
